# weiqi

./: .bazelrc  .gitignore  .gitmodules  BUILD.bazel  MODULE.bazel  README.md  WORKSPACE
src/: AndroidManifest.xml  BUILD  config.pb.json  sign.sh  sign_bundle.sh
src/assets/: gtp.cfg
src/java/com/cwave/weiqi/: GameFragment.kt  MainActivity.kt  SimpleFragment.kt  WeiqiApplication.kt
src/java/com/cwave/weiqi/katago/: BUILD  KataGoBridge.java  katago_bridge.cpp
src/keystore/: release.keystore
src/res/drawable/: ic_launcher_foreground.xml
src/res/mipmap-anydpi-v26/: ic_launcher.xml
src/res/values/: strings.xml  styles.xml
src/res/values-ja/: strings.xml
src/res/values-zh-rCN/: strings.xml
