load("@rules_kotlin//kotlin:core.bzl", "kt_compiler_plugin")

package(default_visibility = ["//visibility:public"])

kt_compiler_plugin(
    name = "jetpack_compose_compiler_plugin",
    id = "androidx.compose.compiler",
    target_embedded_compiler = True,
    visibility = ["//visibility:public"],
    deps = ["@maven//:org_jetbrains_kotlin_kotlin_compose_compiler_plugin"],
)

platform(
    name = "arm64-v8a",
    constraint_values = [
        "@platforms//os:android",
        "@platforms//cpu:arm64",
    ],
)

platform(
    name = "x86",
    constraint_values = [
        "@platforms//os:android",
        "@platforms//cpu:x86_32",
    ],
)
