bazel_dep(name = "platforms", version = "1.0.0")
bazel_dep(name = "protobuf", version = "33.4")
bazel_dep(name = "rules_android", version = "0.7.1")
bazel_dep(name = "rules_android_ndk", version = "0.1.5")
bazel_dep(name = "rules_cc", version = "0.2.17")
bazel_dep(name = "rules_java", version = "9.3.0")
bazel_dep(name = "rules_jvm_external", version = "6.10")
bazel_dep(name = "rules_kotlin", version = "2.2.2")
bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_robolectric", version = "4.14.1.2")
bazel_dep(name = "zlib", version = "1.3.1")

bazel_dep(name = "katago_repo", version = "0.0.0")
local_path_override(
    module_name = "katago_repo",
    path = "third_party/katago",
)

# bazel_dep(name = "eigen", version = "3.4.0.bcr.2")
# Note: if eigen is not in BCR, we might need a http_archive in WORKSPACE or a custom registry.

android_ndk = use_extension(
    "@rules_android_ndk//:extension.bzl",
    "android_ndk_repository_extension",
)
use_repo(android_ndk, "androidndk")

android_sdk = use_extension(
    "@rules_android//rules/android_sdk_repository:rule.bzl",
    "android_sdk_repository_extension",
)
use_repo(android_sdk, "androidsdk")

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")
maven.install(
    artifacts = [
        "androidx.activity:activity-compose:1.8.2",
        "androidx.annotation:annotation:1.7.1",
        "androidx.appcompat:appcompat:1.6.1",
        "androidx.arch.core:core-common:2.2.0",
        "androidx.arch.core:core-runtime:2.2.0",
        "androidx.camera:camera-camera2:1.3.1",
        "androidx.camera:camera-core:1.3.1",
        "androidx.camera:camera-lifecycle:1.3.1",
        "androidx.camera:camera-view:1.3.1",
        "androidx.collection:collection:1.4.0",
        "androidx.compose.material:material-icons-extended-android:1.6.0",
        "androidx.compose.material:material-icons-extended:1.6.0",
        "androidx.compose.material:material:1.6.0",
        "androidx.compose.runtime:runtime:1.6.0",
        "androidx.compose.ui:ui-tooling:1.6.0",
        "androidx.compose.ui:ui:1.6.0",
        "androidx.concurrent:concurrent-futures:1.1.0",
        "androidx.concurrent:concurrent-futures-ktx:1.1.0",
        "androidx.core:core-ktx:1.12.0",
        "androidx.core:core-splashscreen:1.0.1",
        "androidx.core:core:1.12.0",
        "androidx.emoji2:emoji2-views-helper:1.3.0",
        "androidx.emoji2:emoji2:1.3.0",
        "androidx.fragment:fragment-ktx:1.8.1",
        "androidx.lifecycle:lifecycle-common:2.7.0",
        "androidx.lifecycle:lifecycle-livedata-core-ktx:2.7.0",
        "androidx.lifecycle:lifecycle-livedata-core:2.7.0",
        "androidx.lifecycle:lifecycle-livedata:2.7.0",
        "androidx.lifecycle:lifecycle-process:2.7.0",
        "androidx.lifecycle:lifecycle-runtime-compose:2.7.0",
        "androidx.lifecycle:lifecycle-runtime-ktx:2.7.0",
        "androidx.lifecycle:lifecycle-viewmodel-compose:2.7.0",
        "androidx.profileinstaller:profileinstaller:1.3.1",
        "androidx.startup:startup-runtime:1.1.1",
        "androidx.tracing:tracing:1.2.0",
        "androidx.savedstate:savedstate:1.2.1",
        "androidx.security:security-crypto:1.1.0-alpha06",
        "androidx.test:core:1.6.1",
        "androidx.test:runner:1.6.1",
        "androidx.test.ext:junit:1.2.1",
        "com.anthropic:anthropic-java:0.8.0",
        "com.google.ai.edge.litertlm:litertlm-android:0.11.0",
        "com.google.mediapipe:tasks-core:0.10.33",
        "com.expedia:graphql-kotlin-federation:1.0.0-RC5",
        "com.expedia:graphql-kotlin-schema-generator:1.0.0-RC5",
        "com.expedia:graphql-kotlin:1.0.0-RC5",
        "com.fasterxml.jackson.core:jackson-core:2.18.2",
        "com.github.bumptech.glide:compiler:4.16.0",
        "com.github.bumptech.glide:glide:4.16.0",
        "com.github.bumptech.glide:okhttp3-integration:4.16.0",
        "com.google.android.gms:play-services-auth:20.7.0",
        "com.google.android.gms:play-services-location:21.0.1",
        "com.google.android.gms:play-services-maps:18.2.0",
        "com.google.android.material:material:1.11.0",
        "com.google.code.gson:gson:2.10.1",
        "com.google.dagger:dagger-compiler:2.55",
        "com.google.dagger:dagger:2.55",
        "com.google.flogger:flogger-system-backend:0.8",
        "com.google.flogger:flogger:0.8",
        "com.google.guava:guava:33.0.0-android",
        "com.google.guava:listenablefuture:1.0",
        "com.google.maps.android:maps-compose:4.3.0",
        "com.graphql-java:graphql-java:13.0",
        "com.squareup.okhttp3:okhttp:4.12.0",
        "io.ktor:ktor-client-cio:3.1.1",
        "io.ktor:ktor-client-content-negotiation:3.1.1",
        "io.ktor:ktor-serialization-kotlinx-json:3.1.1",
        "io.ktor:ktor-server-cio:3.1.1",
        "io.ktor:ktor-server-sse:3.1.1",
        "io.ktor:ktor-server-websockets:3.1.1",
        "io.modelcontextprotocol:kotlin-sdk-jvm:0.5.0",
        "io.modelcontextprotocol:kotlin-sdk:0.5.0",
        "javax.inject:javax.inject:1",
        "junit:junit:4.13.2",
        "com.google.truth:truth:1.1.3",
        "org.apache.logging.log4j:log4j-core:2.16.0",
        "org.apache.olingo:odata-client-api:4.9.0",
        "org.apache.olingo:odata-client-core:4.9.0",
        "org.apache.olingo:odata-commons-api:4.9.0",
        "org.apache.olingo:odata-commons-core:4.9.0",
        "org.apache.olingo:odata-server-api:4.9.0",
        "org.apache.olingo:odata-server-core:4.9.0",
        "org.apiguardian:apiguardian-api:1.0.0",
        "org.jetbrains.kotlin:kotlin-compose-compiler-plugin:2.2.21",
        "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.10.0",
        "org.jetbrains.kotlinx:kotlinx-coroutines-guava:1.10.0",
        "org.jetbrains.kotlinx:kotlinx-serialization-json-jvm:1.8.1",
        "org.jetbrains.kotlinx:kotlinx-serialization-json:1.8.1",
        "org.junit.jupiter:junit-jupiter-api:5.4.2",
        "org.junit.jupiter:junit-jupiter-params:5.4.2",
        "org.junit.platform:junit-platform-commons:1.4.2",
        "org.opentest4j:opentest4j:1.1.1",
        "org.robolectric:robolectric:4.14.1",
        "org.mockito:mockito-core:4.11.0",
        "org.mockito.kotlin:mockito-kotlin:4.1.0",
        "org.slf4j:slf4j-simple:2.0.17",
    ],
    known_contributing_modules = ["protobuf"],
    repositories = [
        "https://maven.google.com",
        "https://maven-central.storage.googleapis.com/repos/central/data/",
        "https://repo1.maven.org/maven2",
    ],
    version_conflict_policy = "pinned",
)
use_repo(maven, "maven")

register_toolchains(
    "@rules_android//toolchains/android:android_default_toolchain",
    "@rules_android//toolchains/android_sdk:android_sdk_tools",
    "@androidndk//:all",
)
